# baby-monitor

./: .gitmodules  CMakeLists.txt  README.md
Reports/: CC3501 Progress Report - Week 5.docx
src/: board.h  constants.h  hardware_params.h  main.cpp
src/IO/logger/: logger.cpp  logger.h
src/IO/uart_terminal/: uart_terminal.cpp  uart_terminal.h
src/drivers/: led.cpp
src/drivers/HDC2010/: hdc2010.cpp  hdc2010.h
src/drivers/accelerometer/: accelerometer.cpp  accelerometer.h
src/drivers/bluetooth/: bluetooth.cpp  bluetooth.h
src/drivers/daughterboard/accelerometer/: accelerometer.cpp
src/drivers/flash/: flash.cpp  flash.h
src/drivers/led/: led.cpp  led.h
src/drivers/microphone/: microphone.cpp  microphone.h
src/example_scripts/: accelerometer_example.cpp  accelerometer_example.h  fft_example.cpp  fft_example.h  led_example.cpp  led_example.h
src/monitors/: vibrations_alarm.cpp  vibrations_alarm.h
src/sensors/: hdc2010_sensor.cpp  hdc2010_sensor.h  motion.cpp  motion.h  sound_sensor.cpp  sound_sensor.h  vibrations_alarm.cpp
